--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -1,15 +1,46 @@
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
-        <title>@title</title>
+        <title>@title | meenu</title>
+		
+		<meta charset="utf-8"></meta>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+		<meta content="width=device-width, initial-scale=1" name="viewport"></meta>
+		
+		<!-- Bootstrap with default theme -->
+		<link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
+		<link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap-theme.min.css")">
+		
+		<!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+		
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="#">meenu</a>
+				</div>
+				
+				<div id="navbar">
+					<ul class="nav navbar-nav">
+						<li class="active">Home</li>
+						<li>Menu2</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		
+		<div class="container theme-showcase" role="main" id="maincontent">
+			@content
+		</div>
+		
+		<!-- Load JavaScript at last, maybe page load is quicker? -->
+        <script src="@routes.Assets.versioned("javascripts/jquery.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </body>
 </html>
