--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -18,28 +18,27 @@
 		
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
     </head>
-    <body>
+    <body role="document">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
+					<button class="navbar-toggle collapsed" aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" type="button">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<a class="navbar-brand" href="#">meenu</a>
-				</div>
-				
-				<div id="navbar">
-					<ul class="nav navbar-nav">
-						<li class="active">Home</li>
-						<li>Menu2</li>
-					</ul>
 				</div>
 			</div>
 		</nav>
 		
-		<div class="container theme-showcase" role="main" id="maincontent">
+		<div class="container theme-showcase" role="main">
 			@content
 		</div>
 		
 		<!-- Load JavaScript at last, maybe page load is quicker? -->
-        <script src="@routes.Assets.versioned("javascripts/jquery.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </body>
