--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -3,11 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>@title | meenu</title>
-		
 		<meta charset="utf-8"></meta>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
 		<meta content="width=device-width, initial-scale=1" name="viewport"></meta>
+		
+        <title>@title | meenu</title>
 		
 		<!-- Bootstrap with default theme -->
 		<link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.min.css")">
@@ -29,6 +29,11 @@
 						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">meenu</a>
+				</div>
+				<div id="navbar" class="navbar-collapsed collapsed">
+					<ul class="nav navbar">
+						<li class="active">Home</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
