--- a/meenu/app/views/index.scala.html
+++ b/meenu/app/views/index.scala.html
@@ -13,10 +13,11 @@
 		
 		<div class="col-md-4 col-xs-6">
 			<div class="button-group-vertical" role="group">
-				<button class="btn btn-lg btn-default btn-block" type="button">Plan meals</button>
-				<button class="btn btn-lg btn-default btn-block" type="button">Manage products</button>
-				<button class="btn btn-lg btn-default btn-block" type="button">Manage recipes</button>
-				<button class="btn btn-lg btn-default btn-block" type="button">Manage people</button>
+				<a href="/" class="btn btn-lg btn-default btn-block" type="button" role="button">Home</a>
+				<a href="/mealplanner" class="btn btn-lg btn-default btn-block" type="button" role="button">Plan meals</a>
+				<a href="/productmanager" class="btn btn-lg btn-default btn-block" type="button" role="button">Manage products</a>
+				<a href="/recipemanager" class="btn btn-lg btn-default btn-block" type="button" role="button">Manage recipes</a>
+				<a href="/people" class="btn btn-lg btn-default btn-block" type="button" role="button">Manage people</a>
 			</div>
 		</div>
 	</div>
