--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -22,13 +22,23 @@
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<div class="navbar-header">
-					<button class="navbar-toggle collapsed" aria-controls="navbar" aria-expanded="false" data-target="#navbar" data-toggle="collapse" type="button">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">meenu</a>
+					<a class="navbar-brand" href="/">meenu</a>
+				</div>
+				
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li id="home" class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+						<li id="mealplanner"><a href="/mealplanner">Meals</a></li>
+						<li id="productmanager"><a href="/productmanager">Products</a></li>
+						<li id="recipemanager"><a href="/recipemanager">Recipes</a></li>
+						<li id="people"><a href="/people">People</a></li>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -38,7 +48,7 @@
 		</div>
 		
 		<!-- Load JavaScript at last, maybe page load is quicker? -->
-        <script src="@routes.Assets.versioned("https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </body>
