Added meal page
And controller and fixed route to it and fixed up some JS.

--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -44,8 +44,8 @@
 		</nav>
 		
 		<div class="container theme-showcase" role="main">
-			<div class="jumbotron">
-		        <div class="tc_div_92655" style="width:650px;height:162.50px;border:1px solid #C0C0C0;">
+			<div class="jumbotron text-center">
+		        <div class="tc_div_92655 text-center" style="width:650px;height:162.50px;border:1px solid #C0C0C0;">
     		        <a title="Koding Hackaton" href="http://www.tickcounter.com/countdown/1456128000000/america-los_angeles/dhms/FFFFFF3B5998000000FF0000/Koding_Hackaton">Koding Hackaton</a>
     		        <a title="Countdown" href="http://www.tickcounter.com/">Countdown</a>
 		        </div>
