--- a/meenu/app/views/people.scala.html
+++ b/meenu/app/views/people.scala.html
@@ -1,5 +1,27 @@
 @(message: String)
 
 @main("People") {
-	<h1>@message</h1>
+	<div class="jumbotron">
+		<h2>Manage people</h2>
+		<p>@message</p>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Delete</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><a href="/people/edit/1">Steffen</a></td>
+					<td><a href="#"><span class="glyphicon glyphicon-remove"></span><span class="sr-only">Delete person</span></a></td>
+				</tr>
+				<tr>
+					<td><a href="/people/edit/2">Susanne</a></td>
+					<td><a href="#"><span class="glyphicon glyphicon-remove"></span><span class="sr-only">Delete person</span></a></td>
+				</tr>
+			</tbody>
+		</table>
+		<a href="/people/add" role="button" type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span><span class="sr-only">Add person</span></a>
+	</div>
 }
