--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -33,11 +33,12 @@
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li id="home" class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+						<li id="home"><a href="/">Home<span class="sr-only">(current)</span></a></li>
 						<li id="mealplanner"><a href="/mealplanner">Meals</a></li>
 						<li id="productmanager"><a href="/productmanager">Products</a></li>
 						<li id="recipemanager"><a href="/recipemanager">Recipes</a></li>
 						<li id="people"><a href="/people">People</a></li>
+						<li id="settings"><a href="/settings">Settings</a></li>
 					</ul>
 				</div>
 			</div>
