--- a/meenu/app/views/main.scala.html
+++ b/meenu/app/views/main.scala.html
@@ -46,12 +46,10 @@
 		
 		<div class="container theme-showcase" role="main">
 			<div class="jumbotron text-center">
-		        <div class="tc_div_92655 text-center" style="width:650px;height:162.50px;border:1px solid #C0C0C0;">
-    		        <a title="Koding Hackaton" href="http://www.tickcounter.com/countdown/1456128000000/america-los_angeles/dhms/FFFFFF3B5998000000FF0000/Koding_Hackaton">Koding Hackaton</a>
-    		        <a title="Countdown" href="http://www.tickcounter.com/">Countdown</a>
-		        </div>
-		        <script type="text/javascript">(function(){ var s=document.createElement('script');s.src="http://www.tickcounter.com/loader.js";s.async='async';s.onload=function() { tc_widget_loader('tc_div_92655', 'Countdown', 650, ['1456128000000', 'america-los_angeles', 'dhms', 'FFFFFF3B5998000000FF0000', '650', 'C0C0C01', 'Koding Hackaton']);};s.onreadystatechange=s.onload;var head=document.getElementsByTagName('head')[0];head.appendChild(s);}());</script>
-		    </div>
+				<h1>Meenu</h1>
+				<h2>A proof of concept</h2>
+				<p>Read about the idea <a href="/concept">here</a>.</p>
+			</div>
 			@content
 		</div>
 		
